# starcleaner

./: README.md  pyproject.toml
examples/: StarCleaner_Example.ipynb
starcleaner/: __init__.py  detect.py  gaia.py  io.py  masking.py  match.py  pipeline.py  plotting.py  save_utils.py
