[project]
name = "starcleaner"
version = "0.1.0"
description = "Automatic star detection, Gaia crossmatch, and masking for UV/optical images."
authors = [{name="Akhil Krishna"}]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "astropy",
    "photutils",
    "astroquery",
    "matplotlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

